# comeback-ai

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  compose.yaml  pyproject.toml  run.py
knowledge/: access-and-wellbeing.md  study-support.md
src/comeback_ai/: __init__.py  config.py
src/comeback_ai/api/: main.py
src/comeback_ai/domain/: schemas.py
src/comeback_ai/knowledge/: retriever.py  service.py
src/comeback_ai/ml/: data.py  service.py  train.py
tests/: test_api.py  test_data.py  test_model.py  test_retriever.py
ui/: app.py
