[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "comeback-ai"
version = "0.1.0"
description = "Local-first student success ML and grounded guidance platform"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115,<1",
  "uvicorn[standard]>=0.30,<1",
  "pydantic-settings>=2.6,<3",
  "pandas>=2.2,<3",
  "scikit-learn>=1.5,<2",
  "joblib>=1.4,<2",
  "httpx>=0.27,<1",
]

[project.optional-dependencies]
ui = ["streamlit>=1.40,<2"]
dev = ["pytest>=8,<9", "pytest-cov>=5,<7", "ruff>=0.8,<1"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
